--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,6 @@ Layout/AccessModifierIndentation:
 
 Layout/MultilineMethodCallIndentation:
   Enabled: false
+
+Layout/FirstHashElementIndentation:
+  Enabled: false
